--- a/Musei/src/pages/home/home.html
+++ b/Musei/src/pages/home/home.html
@@ -52,14 +52,14 @@
 	</ion-row>
 	<ion-row class="rowHome">
         <ion-col class="colHome">
-			<ion-card id="card-mostre" class="cardHome" (click)="findMostre()" style="background-color: RoyalBlue">
+			<ion-card id="card-mostre" class="cardHome" (click)="findMostre()" style="background-color: yellow">
         <div class="card-gradient">
     			<div class="card-title animated fadeInRight">Mostre</div>
         </div>
   		  	</ion-card>
 	    </ion-col>
 		<ion-col class="colHome">
-  	  		<ion-card id="card-eventi" class="cardHome" (click)="findEventi()" style="background-color: SeaGreen">
+  	  		<ion-card id="card-eventi" class="cardHome" (click)="findEventi()" style="background-color: orange">
             <div class="card-gradient">
     			<div class="card-title animated fadeInRight">Eventi</div>
             </div>
