--- a/Musei/src/pages/test-calendar/test-calendar.html
+++ b/Musei/src/pages/test-calendar/test-calendar.html
@@ -23,41 +23,46 @@
     <div class="calendar-body">
       <ion-grid>
         <ion-row class="calendar-weekday">
-          <ion-col>Su</ion-col>
-          <ion-col>Mo</ion-col>
-          <ion-col>Tu</ion-col>
-          <ion-col>We</ion-col>
-          <ion-col>Th</ion-col>
-          <ion-col>Fr</ion-col>
-          <ion-col>Sa</ion-col>
+          <ion-col>Dom</ion-col>
+          <ion-col>Lun</ion-col>
+          <ion-col>Mar</ion-col>
+          <ion-col>Mer</ion-col>
+          <ion-col>Gio</ion-col>
+          <ion-col>Ven</ion-col>
+          <ion-col>Sab</ion-col>
         </ion-row>
         <ion-row class="calendar-date">
           <ion-col col-1 *ngFor="let lastDay of daysInLastMonth" class="last-month" (click)="goToLastMonth()">{{lastDay}}</ion-col>
-          <ion-col col-1 *ngFor="let day of daysInThisMonth" (click)="selectDate(day)">
+          <ion-col col-1 *ngFor="let day of daysInThisMonth" (click)="selezionaData(day)">
             <span class="currentDate" *ngIf="currentDate === day; else otherDate">{{day}}</span>
             <ng-template #otherDate class="otherDate">
               {{day}}<br>
-              <div class="event-bullet" *ngIf="checkEvent(day)"></div>
+              <div class="event-bullet" *ngIf="controllaEventi(day)"></div>
             </ng-template>
           </ion-col>
           <ion-col col-1 *ngFor="let nextDay of daysInNextMonth" class="next-month" (click)="goToNextMonth()">{{nextDay}}</ion-col>
         </ion-row>
       </ion-grid>
     </div>
+    <ion-card class="evento">
     <div class="selected-event" *ngIf="isSelected">
       <ion-list>
-        <ion-item *ngFor="let se of selectedEvent">
-          <ion-buttons end>
+        <ion-item *ngFor="let se of selectedEvent" [innerHTML]="se.elementHTML.outerHTML">
+
+          <!-- <ion-buttons end>
             <button ion-button clear icon-only (click)="deleteEvent(se)">
               <ion-icon name="close"></ion-icon>
             </button>
-          </ion-buttons>
-          <h2>{{se.title}}</h2>
-          <h3>{{se.message}}</h3>
-          <p>Start Date: {{se.startDate}}<br>
-          Start Date: {{se.endDate}}</p>
+          </ion-buttons> -->
+
+            <!-- <h2>{{se.title}}</h2>
+            <h3>{{se.location}}</h3>
+            <p>Start Date: {{se.startDate}}<br>
+            End Date: {{se.endDate}}</p> -->
+
         </ion-item>
       </ion-list>
     </div>
+  </ion-card>
   </ion-content>
 </ion-content>
